--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: feralc/rinha-de-backend-2024:latest
     environment:
       GIN_MODE: release
-      APP_IN_MEMORY: true
+      APP_IN_MEMORY: "false"
     expose:
     - "8080"
     depends_on:
@@ -19,7 +19,7 @@ services:
     image: feralc/rinha-de-backend-2024:latest
     environment:
       GIN_MODE: release
-      APP_IN_MEMORY: true
+      APP_IN_MEMORY: "false"
     expose:
     - "8080"
     depends_on:
