--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       GIN_MODE: release
       APP_PORT: "8080"
+      DROP_DB_ON_START: "true"
     expose:
     - "8080"
     depends_on:
@@ -21,6 +22,7 @@ services:
     environment:
       GIN_MODE: release
       APP_PORT: "8081"
+      DROP_DB_ON_START: "true"
     expose:
     - "8081"
     network_mode: host
