--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   web01:
-    image: felipealcantara/rinha-de-backend-2024:latest
+    image: felipealcantara/rinha-de-backend-2024:1.0.0
     environment:
       GIN_MODE: release
       APP_PORT: "8080"
@@ -15,10 +15,10 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.35"
-          memory: "120MB"
+          cpus: "0.23"
+          memory: "50MB"
   web02:
-    image: felipealcantara/rinha-de-backend-2024:latest
+    image: felipealcantara/rinha-de-backend-2024:1.0.0
     environment:
       GIN_MODE: release
       APP_PORT: "8081"
@@ -31,36 +31,39 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.35"
-          memory: "120MB"
+          cpus: "0.23"
+          memory: "50MB"
 
   lb:
-    image: felipealcantara/rinha-de-backend-2024-lb:latest
+    image: felipealcantara/rinha-de-backend-2024-lb:1.0.0
     environment:
       APP_PORT: 9999
-      APP_MAX_CONNS_PER_HOST: 100
-      APP_MAX_IDLE_CONNS: 4
-      APP_MAX_IDLE_CONNS_PER_HOST: 2
-      APP_IDLE_CONN_TIMEOUT_SECONDS: 30
+      APP_MAX_CONNS_PER_HOST: 1000
+      APP_MAX_IDLE_CONNS: 0
+      APP_MAX_IDLE_CONNS_PER_HOST: 0
+      APP_IDLE_CONN_TIMEOUT_SECONDS: 0
+      APP_BACKENDS: "http://127.0.0.1:8080,http://127.0.0.1:8081"
     expose:
     - "9999"
     depends_on:
     - web01
     - web02
+    - db
     network_mode: host
     deploy:
       resources:
         limits:
-          cpus: "0.5"
-          memory: "170MB"
+          cpus: "0.83"
+          memory: "50MB"
 
   db:
     image: mongo:7.0.5
+    command: mongod --quiet --logpath /dev/null
     expose:
     - "27017"
     network_mode: host
     deploy:
       resources:
         limits:
-          cpus: "0.3"
-          memory: "140MB"
+          cpus: "0.21"
+          memory: "100MB"
